# linux

./: MAINTAINERS
Documentation/admin-guide/: kernel-api-spec.rst
arch/um/kernel/: dyn.lds.S  uml.lds.S
arch/x86/kernel/: vmlinux.lds.S
block/: blk-integrity.c  blk-sysfs.c  genhd.c
drivers/android/: binder.c
drivers/fwctl/: main.c
fs/: eventpoll.c  exec.c
include/asm-generic/: vmlinux.lds.h
include/linux/: ioctl_api_spec.h  kernel_api_spec.h  syscall_api_spec.h  syscalls.h
init/: Kconfig
kernel/: Makefile
kernel/api/: Kconfig  Makefile  ioctl_validation.c  kapi_debugfs.c  kernel_api_spec.c
mm/: mlock.c
net/: socket.c
tools/kapi/: .gitignore  Cargo.toml
tools/kapi/src/: main.rs
tools/kapi/src/extractor/: debugfs.rs  mod.rs  source_parser.rs
tools/kapi/src/extractor/vmlinux/: binary_utils.rs  mod.rs
tools/kapi/src/formatter/: json.rs  mod.rs  plain.rs  rst.rs  shall.rs
