[package]
name = "kapi"
version = "0.1.0"
edition = "2024"
authors = ["Sasha Levin <sashal@kernel.org>"]
description = "Tool for extracting and displaying kernel API specifications"
license = "GPL-2.0"

[dependencies]
goblin = "0.10"
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
walkdir = "2.4"

[dev-dependencies]
tempfile = "3.8"
